--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,css,md,ts,tsx}": "prettier --write"
+    "*.{js,css,md,ts,tsx}": ["prettier --write","git add"]
+    
   }
 }
