--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server __jsonserver_mock/db.json --watch",
+    "json-server": "json-server __jsonserver_mock/db.json --watch --port 11111",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -47,6 +47,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
+    "json-server": "^0.17.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.4.1"
   },
